<resources>

    <string name="app_name">TogoApp</string>

    <!-- ACTION BAR -->
    <string name="action_settings">Settings</string>
    <string name="action_task_list">Liste</string>
    <string name="action_map">Carte</string>
    <string name="action_form">Form</string>
    <string name="action_drop">Vider la table</string>

    <!-- HOME PAGE -->
    <string name="places_to_go">Lieux restants</string>
    <string name="add_place">Ajouter un lieu</string>
    <string name="display_map">Afficher la carte</string>

    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_list">Lieux à voir</string>
    <string name="title_activity_display_form">Nouveau lieu</string>
    <string name="place">Liste des lieux</string>

    <!-- FORM -->

    <string name="form_title">Création d\'une nouvelle activité</string>
    <string name="task_name">Nom</string>
    <string name="address">Adresse</string>
    <string name="task_description">Description</string>


    <!-- BUTTONS -->
    <string name="button_create">Créer</string>
    <string name="button_save">Sauver</string>
    <string name="button_see">Voir</string>
    <string name="button_see_map">Voir la carte</string>
    <string name="button_edit">Editer</string>
    <string name="button_delete">Supprimer</string>

</resources>
