<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!-- Places to go-->
    <TextView
        android:id="@+id/placesToGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/places_to_go"
        android:layout_gravity="center_horizontal|top" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_see"
        android:onClick="displayList"
        android:layout_gravity="center_horizontal|top" />

    <!-- Add place -->
    <TextView
        android:id="@+id/addPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_place"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create"
        android:layout_gravity="center"
        android:onClick="displayForm" />

    <!-- Show Map-->
    <TextView
        android:id="@+id/displayMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_map"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_see_map"
        android:layout_gravity="center"
        android:onClick="displayMap" />
</LinearLayout>
