<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewForm"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:measureWithLargestChild="false">

        <TextView
            android:id="@+id/textViewformTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_title"
            android:gravity="center" />

        <EditText
            android:id="@+id/editTextTaskName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="text"
            android:hint="@string/task_name"/>

        <EditText
            android:id="@+id/editTextTaskDescription"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="text"
            android:hint="@string/task_description"/>

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/address"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_create"
            android:onClick="createTask"
            android:layout_gravity="center" />

    </LinearLayout>
</ScrollView>